--- a/HtmlPage.html
+++ b/HtmlPage.html
@@ -69,14 +69,14 @@
                 <p><a href="#" class="btn btn-primary" role="button">Reserve Now</a></p>
             </div>
             <div class="column col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                <img class="locationImgRight img-responsive" src="Images/italy-mountain-villa.jpeg" />
+                <img class="locationImgRight img-responsive" src="Images/italy-mountain-villa.jpeg" alt="Italy Mountain-Villa" />
             </div>
         </div>
     </div>
     <div class="container-fluid layoutTwo">
         <div class="row">
             <div class="column col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                <img class="locationImgLeft img-responsive" src="Images/modern-villa.jpeg" />
+                <img class="locationImgLeft img-responsive" src="Images/modern-villa.jpeg" alt="Modern Villa"/>
             </div>
             <div class="column col-xs-8 col-sm-8 col-md-8 col-lg-8">
                 <h2 class="containerTitleTwo">Location #2</h2>
@@ -95,7 +95,7 @@
                 <p><a href="#" class="btn btn-primary" role="button">Join Us!</a></p>
             </div>
             <div class="column col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                <img class="locationImgRight img-responsive" src="Images/tuscany-grape-field-nature-51947.jpeg" />
+                <img class="locationImgRight img-responsive" src="Images/tuscany-grape-field-nature-51947.jpeg" alt="Tuscany Grape Field Nature" />
             </div>
         </div>
     </div>
